Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS

            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListConfig(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListConfigEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListDataBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListDataBlkRd(UInt32[] dataptr, ref UInt16 datacountptr, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListDataBlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListDataBlkWr(UInt32[] dataptr, UInt16 datacount, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListDataRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListDataRdEx(Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListDataWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ListDataWrEx(UInt32 value, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListInit(UInt32 listaddr, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListNextRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListNextRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListNextWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListNextWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ListPostRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ListPostWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ListPreRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ListPreWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgActivityRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_MsgActivityRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgActivityWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgActivityWr(UInt16 value, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_MsgCheck(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgCommRd(ref MSGFIELDS429 msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgCommWr(ref MSGFIELDS429 msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgConfig(UInt32 configval, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgMultiSkipWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgMultiSkipWr(Int32[] skip, UInt32[] msgaddr, Int32 msgcount, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamWaveformConfig@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ParamWaveformConfig(UInt32 configval, Int32 highvolt, Int32 lowvolt, Int32 nullvolt, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamWaveformConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ParamWaveformConfigEx(UInt32 configval, ref PARAMFIELDS429 paramflds, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched1Build@44", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched1Build(Int32 basevalmsgnum, Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiodin, Int32[] maxperiodin, Int32 speed, Int32 microflag, Int32 debugvalflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched2AdvanceMessage@48", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched2AdvanceMessage(Int32 entries, Int32 panicindex, Int32 nummsgs, IntPtr infoptr, ref Int32 nextdeltaptr, Int32 ulmastertimer, ref UInt32 msgaddrptr, Int32 debugvalflag, Int32 tryflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched2AdvanceNoMessage@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched2AdvanceNoMessage(Int32 nummsgs, IntPtr infoptr, ref Int32 nextdeltaptr, Int32 ulmastertimer, ref UInt32 msgaddrptr, Int32 debugvalflag, Int32 tryflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched2Analyze@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_Sched2Analyze(Int32 nummsgs, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched2Build@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched2Build(Int32 nummsgs, UInt32[] msgaddrptr, Int32[] minlist, Int32[] maxlist, Int32 speedflag, Int32 microflag, Int32 debugvalflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched2BuildEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched2BuildEx(ref Int32 styleptr, Int32 nummsgs, Int32[] minlist, Int32[] maxlist, Int32 speedflag, Int32 microflag, Int32 interceptflag);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched2BuildExx@60", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched2BuildExx(Int32 style, Int32 speedflag, Int32 microflag, Int32 debugvalflag, Int32 tryflag, Int32 nummsgs, Int32[] minlist, Int32[] maxlist, ref Int32 entriesptr, ref Int32 maxentriesptr, IntPtr infoptr, UInt32[] msgaddrptr, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched3Build@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched3Build(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 speed, Int32 microflag, Int32 debugvalflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched3BuildEx@44", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched3BuildEx(Int32 basevalmsgnum, Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiodin, Int32[] maxperiodin, Int32 speed, Int32 microflag, Int32 debugvalflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched3Calc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_Sched3Calc(IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched3Check@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched3Check(ref Int32 minperiod, ref Int32 maxperiod, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched3ToBit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_Sched3ToBit(UInt32 value, IntPtr infoptr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched4AdvanceMessage@48", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched4AdvanceMessage(Int32 entries, Int32 panicindex, Int32 nummsgs, IntPtr infoptr, ref Int32 nextdeltaptr, Int32 ulmastertimer, ref UInt32 msgaddrptr, Int32 debugvalflag, Int32 tryflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched4AdvanceNoMessage@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_Sched4AdvanceNoMessage(Int32 nummsgs, IntPtr infoptr, ref Int32 nextdeltaptr, Int32 ulmastertimer, ref UInt32 msgaddrptr, Int32 debugvalflag, Int32 tryflag, Int32 interceptflag, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_Sched4Analyze@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_Sched4Analyze(Int32 nummsgs, IntPtr infoptr);
